# BestPlaceProject

./: .~lock.DATA.xlsx#  1-3.ipynb  EDA.ipynb  pyproject.toml
.ipynb_checkpoints/: EDA-checkpoint.ipynb
