[tool.poetry]
name = "bestplaceproject"
version = "0.1.0"
description = ""
authors = ["Sergo448 <Sergey.6362@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.1"
numpy = "^1.23.3"
matplotlib = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
